# gordon

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
src/gordon/: __init__.py  __main__.py  cli.py  config.py
src/gordon/agent/: __init__.py  brain.py  memory.py  prompts.py  tools.py
src/gordon/agent/providers/: __init__.py  anthropic.py
src/gordon/broker/: __init__.py  alpaca_broker.py  ccxt_broker.py  simulated.py
src/gordon/core/: __init__.py  enums.py  errors.py  events.py  models.py  protocols.py
src/gordon/data/: __init__.py  base.py  live.py  storage.py
src/gordon/data/providers/: __init__.py  ccxt_provider.py  yfinance.py
src/gordon/engine/: __init__.py  _helpers.py  backtest.py  clock.py  event_bus.py  live.py  paper.py  runner.py
src/gordon/persistence/: __init__.py  models.py  store.py
src/gordon/portfolio/: __init__.py  analytics.py  optimizer.py  rebalancer.py  tracker.py
src/gordon/risk/: __init__.py  guards.py  limits.py  manager.py  metrics.py  sizing.py
src/gordon/strategy/: __init__.py  base.py  indicators.py  registry.py
src/gordon/strategy/templates/: __init__.py  mean_reversion.py  momentum.py  sma_crossover.py
src/gordon/utils/: __init__.py  logging.py  retry.py  timing.py
tasks/: lessons.md  todo.md
tests/: conftest.py
tests/e2e/: test_full_backtest.py
tests/integration/: test_backtest_engine.py
tests/unit/: test_agent_brain.py  test_agent_memory.py  test_agent_prompts.py  test_agent_tools.py  test_config.py  test_engine_helpers.py  test_event_bus.py  test_events.py  test_limits.py  test_live_data.py  test_models.py  test_optimizer.py  test_paper_engine.py  test_persistence.py  test_portfolio_tracker.py  test_rebalancer.py  test_risk_guards.py  test_risk_manager.py  test_risk_metrics.py  test_runner.py  test_simulated_broker.py  test_sizing.py  test_strategy.py
