[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gordon"
version = "0.1.0"
description = "AI-powered trading agent with backtesting, risk management, and portfolio optimization"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [{ name = "TJM" }]
keywords = ["trading", "ai", "backtesting", "portfolio", "quantitative-finance"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial :: Investment",
    "Typing :: Typed",
]
dependencies = [
    "pydantic>=2.0,<3",
    "pydantic-settings>=2.0,<3",
    "pyyaml>=6.0",
    "pandas>=2.0,<3",
    "numpy>=1.24,<3",
    "ccxt>=4.0",
    "alpaca-py>=0.20",
    "yfinance>=0.2",
    "pandas-ta>=0.4.67b0",
    "scipy>=1.11",
    "anthropic>=0.40",
    "typer[all]>=0.12",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "sqlalchemy>=2.0",
    "structlog>=24.0",
    "tenacity>=8.0",
    "rich>=13.0",
    "httpx>=0.27",
    "pyarrow>=15.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.10",
    "pre-commit>=3.7",
    "pandas-stubs>=2.0",
    "types-PyYAML>=6.0",
]

[project.scripts]
gordon = "gordon.cli:app"

[project.urls]
Homepage = "https://github.com/tmcga/gordon"
Repository = "https://github.com/tmcga/gordon"
Issues = "https://github.com/tmcga/gordon/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/gordon"]

[tool.ruff]
src = ["src"]
target-version = "py312"
line-length = 99

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "N",     # pep8-naming
    "UP",    # pyupgrade
    "B",     # flake8-bugbear
    "SIM",   # flake8-simplify
    "TCH",   # flake8-type-checking
    "RUF",   # ruff-specific
]

[tool.ruff.lint.flake8-type-checking]
runtime-evaluated-base-classes = ["sqlalchemy.orm.DeclarativeBase"]

[tool.ruff.lint.isort]
known-first-party = ["gordon"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
mypy_path = "src"

[[tool.mypy.overrides]]
module = [
    "ccxt.*",
    "yfinance.*",
    "pandas_ta.*",
    "alpaca.*",
    "scipy.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "gordon.broker.alpaca_broker",
    "gordon.broker.ccxt_broker",
]
disable_error_code = ["union-attr", "no-untyped-def"]

[[tool.mypy.overrides]]
module = ["gordon.portfolio.optimizer"]
disable_error_code = ["arg-type", "type-arg", "assignment", "no-any-return", "misc", "import-untyped"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra --strict-markers --cov=gordon --cov-report=term-missing"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests requiring external services",
]

[tool.coverage.run]
source = ["gordon"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "@overload",
    "raise NotImplementedError",
]

[tool.bandit]
exclude_dirs = ["tests"]
skips = ["B101", "B107"]  # B101: assert ok; B107: empty default passwords are env-overridden
